[gd_scene load_steps=6 format=4 uid="uid://cv85whahpwd8w"]

[ext_resource type="TileSet" uid="uid://fan7p1toc3ii" path="res://maps/tileset/map_base.tres" id="1_cusiw"]
[ext_resource type="Script" uid="uid://cy76thka3qc2g" path="res://maps/map_list/starting/starting_room.gd" id="1_ugi7g"]
[ext_resource type="PackedScene" uid="uid://cbbj35mljnpnb" path="res://maps/exits/exits.tscn" id="3_i8l4q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwdnj"]
size = Vector2(397, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cusiw"]
size = Vector2(397, 262)

[node name="StartingRoom" type="Node2D"]
script = ExtResource("1_ugi7g")

[node name="RegWalls" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//xEAAAABAAMAAAD//xAAAAABAAcAAAD//wwAAAABAAMAAAD//wsAAAABAAMAAAD//woAAAABAAMAAAD//wkAAAABAAMAAAD//wgAAAABAAMAAAD//wcAAAABAAMAAAD//wYAAAABAAMAAAD//wUAAAABAAMAAAD//wQAAAABAAMAAAD//wMAAAABAAMAAAD//wIAAAABAAMAAAD//wEAAAABAAMAAAD//wAAAAABAAMAAAD/////AAABAAMAAAAAAP//AAABAAMAAAAAAAAAAAABAAMAAAD+/wAAAAAAAAMAAAD+////AAAAAAMAAAAAAAEAAAABAAMAAAD+/wEAAAACAAYAAAAAAAIAAAABAAMAAAD+/wIAAAACAAYAAAAAAAMAAAABAAMAAAD+/wMAAAACAAYAAAAAAAQAAAABAAMAAAD+/wQAAAAAAAMAAAAAAAUAAAABAAMAAAD+/wUAAAACAAYAAAAAAAYAAAABAAMAAAD+/wYAAAAAAAMAAAAAAAcAAAABAAMAAAD+/wcAAAACAAYAAAAAAAgAAAABAAMAAAD+/wgAAAAAAAMAAAAAAAkAAAABAAMAAAD+/wkAAAAAAAMAAAAAAAoAAAABAAMAAAD+/woAAAAAAAMAAAAAAAsAAAABAAMAAAD+/wsAAAACAAYAAAAAAAwAAAABAAMAAAD+/wwAAAACAAYAAAAAABAAAAABAAcAAAD+/xAAAAAEAAcAAAAAABEAAAABAAMAAAD+/xEAAAACAAYAAAAAABIAAAABAAQAAAD//xIAAAABAAQAAAD+/xIAAAAAAAQAAAASABEAAAABAAMAAAARABEAAAABAAMAAAAQABEAAAABAAMAAAAPABEAAAABAAMAAAAHABEAAAABAAMAAAAGABEAAAABAAMAAAAFABEAAAABAAMAAAAEABEAAAABAAMAAAADABEAAAABAAMAAAACABEAAAABAAMAAAABABEAAAABAAMAAAABABIAAAABAAUAAAACABIAAAABAAQAAAADABIAAAABAAQAAAAEABIAAAABAAQAAAAFABIAAAABAAQAAAAGABIAAAABAAQAAAAHABIAAAABAAUAAAAPABIAAAABAAUAAAAQABIAAAABAAUAAAARABIAAAABAAQAAAASABIAAAABAAQAAAD///v/AAABAAcAAAAAAPv/AAABAAcAAAABAPv/AAABAAcAAAACAPv/AAABAAcAAAADAPv/AAABAAcAAAAEAPv/AAABAAcAAAAFAPv/AAABAAcAAAAGAPv/AAABAAcAAAAHAPv/AAABAAcAAAAIAPv/AAABAAcAAAAJAPv/AAABAAcAAAAKAPv/AAABAAcAAAALAPv/AAABAAcAAAAMAPv/AAABAAcAAAANAPv/AAABAAcAAAAOAPv/AAABAAcAAAAPAPv/AAABAAcAAAAQAPv/AAABAAcAAAARAPv/AAABAAcAAAASAPv/AAABAAcAAAASAPz/AAABAAQAAAARAPz/AAABAAQAAAAQAPz/AAABAAUAAAAPAPz/AAABAAUAAAAOAPz/AAABAAUAAAANAPz/AAABAAQAAAAMAPz/AAABAAUAAAALAPz/AAABAAQAAAAKAPz/AAABAAQAAAAJAPz/AAABAAQAAAAIAPz/AAABAAUAAAAHAPz/AAABAAUAAAAGAPz/AAAAAAUAAAAFAPz/AAABAAMAAAAEAPz/AAABAAMAAAADAPz/AAABAAMAAAACAPz/AAABAAMAAAABAPz/AAABAAMAAAAAAPz/AAABAAMAAAD///z/AAABAAMAAAD+//z/AAAAAAMAAAD+//v/AAAEAAcAAAD///7/AAABAAMAAAD///3/AAABAAMAAAAAAP3/AAABAAMAAAD+//3/AAACAAYAAAAAAP7/AAABAAMAAAD+//7/AAACAAYAAAASABAAAAABAAcAAAARABAAAAABAAcAAAAQABAAAAABAAcAAAAPABAAAAABAAcAAAAHABAAAAABAAcAAAAGABAAAAABAAcAAAAFABAAAAABAAcAAAAEABAAAAABAAcAAAADABAAAAABAAcAAAACABAAAAABAAcAAAABABAAAAABAAcAAAAEAAwAAAABAAMAAAAEAAsAAAABAAMAAAAEAAoAAAABAAMAAAAEAAkAAAABAAMAAAAEAAgAAAABAAMAAAAEAAcAAAABAAMAAAAEAAYAAAABAAMAAAAEAAUAAAABAAMAAAAEAAQAAAABAAMAAAAEAAMAAAABAAMAAAAEAAIAAAABAAMAAAAEAAEAAAABAAMAAAAEAAAAAAABAAMAAAAEAP//AAABAAMAAAAEAP7/AAABAAMAAAAEAP3/AAABAAMAAAAFAP3/AAABAAMAAAADAP3/AAABAAMAAAAFAP7/AAABAAMAAAADAP7/AAABAAMAAAAFAP//AAABAAMAAAADAP//AAABAAMAAAAFAAAAAAABAAMAAAADAAAAAAABAAMAAAAFAAEAAAABAAMAAAADAAEAAAABAAMAAAAFAAIAAAABAAMAAAADAAIAAAABAAMAAAAFAAMAAAABAAMAAAADAAMAAAABAAMAAAAFAAQAAAABAAMAAAADAAQAAAABAAMAAAAFAAUAAAABAAMAAAADAAUAAAABAAMAAAAFAAYAAAABAAMAAAADAAYAAAABAAMAAAAFAAcAAAABAAMAAAADAAcAAAABAAMAAAAFAAgAAAABAAMAAAADAAgAAAABAAMAAAAFAAkAAAABAAMAAAADAAkAAAABAAMAAAAFAAoAAAABAAMAAAADAAoAAAABAAMAAAAFAAsAAAABAAMAAAADAAsAAAABAAMAAAAFAAwAAAABAAMAAAADAAwAAAABAAMAAAAGAP3/AAACAAMAAAAGAP7/AAAAAAYAAAAGAP//AAACAAMAAAAGAAAAAAAAAAYAAAAGAAEAAAACAAMAAAAGAAIAAAACAAMAAAAGAAMAAAAAAAYAAAAGAAQAAAAAAAYAAAAGAAUAAAACAAMAAAAGAAYAAAACAAMAAAAGAAcAAAAAAAYAAAAGAAgAAAACAAMAAAAGAAkAAAAAAAYAAAAGAAoAAAACAAMAAAAGAAsAAAAAAAYAAAAGAAwAAAACAAMAAAABAP3/AAABAAMAAAABAP7/AAABAAMAAAABAP//AAABAAMAAAABAAAAAAABAAMAAAABAAEAAAABAAMAAAABAAIAAAABAAMAAAABAAMAAAABAAMAAAABAAQAAAABAAMAAAABAAUAAAABAAMAAAABAAYAAAABAAMAAAABAAcAAAABAAMAAAABAAgAAAABAAMAAAABAAkAAAABAAMAAAABAAoAAAABAAMAAAABAAsAAAABAAMAAAABAAwAAAABAAMAAAACAAwAAAABAAMAAAACAAsAAAABAAMAAAACAAoAAAABAAMAAAACAAkAAAABAAMAAAACAAgAAAABAAMAAAACAAcAAAABAAMAAAACAAYAAAABAAMAAAACAAUAAAABAAMAAAACAAQAAAABAAMAAAACAAMAAAABAAMAAAACAAIAAAABAAMAAAACAAEAAAABAAMAAAACAAAAAAABAAMAAAACAP//AAABAAMAAAACAP7/AAABAAMAAAACAP3/AAABAAMAAAAMABIAAAABAAQAAAAMABEAAAABAAMAAAAMABAAAAABAAcAAAAOABIAAAABAAUAAAAOABEAAAABAAMAAAAOABAAAAABAAcAAAANABIAAAABAAUAAAANABEAAAABAAMAAAANABAAAAABAAcAAAAIABAAAAABAAcAAAAIABEAAAABAAMAAAAIABIAAAABAAUAAAAGAA0AAAACAAQAAAAAAA0AAAABAAUAAAD//w0AAAABAAQAAAD+/w0AAAAAAAQAAAABAA0AAAABAAUAAAACAA0AAAABAAUAAAADAA0AAAABAAQAAAAEAA0AAAABAAUAAAAFAA0AAAABAAQAAAATAPv/AAABAAcAAAATAPz/AAABAAQAAAATABAAAAABAAcAAAATABEAAAABAAMAAAATABIAAAABAAUAAAAUAPv/AAABAAcAAAAUAPz/AAABAAQAAAAUABAAAAABAAcAAAAUABEAAAABAAMAAAAUABIAAAABAAQAAAAVAPv/AAABAAcAAAAVAPz/AAABAAQAAAAVABAAAAABAAcAAAAVABEAAAABAAMAAAAVABIAAAABAAUAAAAWAPv/AAABAAcAAAAWAPz/AAABAAQAAAAWABAAAAABAAcAAAAWABEAAAABAAMAAAAWABIAAAABAAQAAAAXAPv/AAABAAcAAAAXAPz/AAABAAUAAAAYAPv/AAABAAcAAAAYAPz/AAABAAQAAAAZAPv/AAABAAcAAAAZAPz/AAABAAQAAAAaAPv/AAABAAcAAAAaAPz/AAABAAQAAAAbAPv/AAABAAcAAAAbAPz/AAABAAQAAAAbABAAAAABAAcAAAAbABEAAAABAAMAAAAbABIAAAABAAUAAAAcAPv/AAABAAcAAAAcAPz/AAACAAUAAAAcABAAAAABAAcAAAAcABEAAAABAAMAAAAcABIAAAABAAQAAAAdAPv/AAABAAcAAAAdAPz/AAABAAMAAAAdAP3/AAABAAMAAAAdAP7/AAABAAMAAAAdAP//AAABAAMAAAAdAAAAAAABAAMAAAAdAAEAAAABAAMAAAAdAAIAAAABAAMAAAAdAAMAAAABAAMAAAAdAAQAAAABAAMAAAAdAAUAAAABAAMAAAAdAAYAAAABAAMAAAAdAAcAAAABAAMAAAAdAAgAAAABAAMAAAAdAAkAAAABAAMAAAAdAAoAAAABAAMAAAAdAAsAAAABAAMAAAAdAAwAAAABAAMAAAAdAA0AAAABAAUAAAAdABAAAAABAAcAAAAdABEAAAABAAMAAAAdABIAAAABAAUAAAAeAPv/AAABAAcAAAAeAPz/AAABAAMAAAAeAP3/AAABAAMAAAAeAP7/AAABAAMAAAAeAP//AAABAAMAAAAeAAAAAAABAAMAAAAeAAEAAAABAAMAAAAeAAIAAAABAAMAAAAeAAMAAAABAAMAAAAeAAQAAAABAAMAAAAeAAUAAAABAAMAAAAeAAYAAAABAAMAAAAeAAcAAAABAAMAAAAeAAgAAAABAAMAAAAeAAkAAAABAAMAAAAeAAoAAAABAAMAAAAeAAsAAAABAAMAAAAeAAwAAAABAAMAAAAeAA0AAAABAAUAAAAeABAAAAABAAcAAAAeABEAAAABAAMAAAAeABIAAAABAAUAAAAfAPv/AAABAAcAAAAfAPz/AAABAAMAAAAfAP3/AAABAAMAAAAfAP7/AAABAAMAAAAfAP//AAABAAMAAAAfAAAAAAABAAMAAAAfAAEAAAABAAMAAAAfAAIAAAABAAMAAAAfAAMAAAABAAMAAAAfAAQAAAABAAMAAAAfAAUAAAABAAMAAAAfAAYAAAABAAMAAAAfAAcAAAABAAMAAAAfAAgAAAABAAMAAAAfAAkAAAABAAMAAAAfAAoAAAABAAMAAAAfAAsAAAABAAMAAAAfAAwAAAABAAMAAAAfAA0AAAABAAQAAAAfABAAAAABAAcAAAAfABEAAAABAAMAAAAfABIAAAABAAQAAAAgAPv/AAABAAcAAAAgAPz/AAABAAMAAAAgAP3/AAABAAMAAAAgAP7/AAABAAMAAAAgAP//AAABAAMAAAAgAAAAAAABAAMAAAAgAAEAAAABAAMAAAAgAAIAAAABAAMAAAAgAAMAAAABAAMAAAAgAAQAAAABAAMAAAAgAAUAAAABAAMAAAAgAAYAAAABAAMAAAAgAAcAAAABAAMAAAAgAAgAAAABAAMAAAAgAAkAAAABAAMAAAAgAAoAAAABAAMAAAAgAAsAAAABAAMAAAAgAAwAAAABAAMAAAAgAA0AAAABAAQAAAAgABAAAAABAAcAAAAgABEAAAABAAMAAAAgABIAAAABAAQAAAAhAPv/AAABAAcAAAAhAPz/AAABAAMAAAAhAP3/AAABAAMAAAAhAP7/AAABAAMAAAAhAP//AAABAAMAAAAhAAAAAAABAAMAAAAhAAEAAAABAAMAAAAhAAIAAAABAAMAAAAhAAMAAAABAAMAAAAhAAQAAAABAAMAAAAhAAUAAAABAAMAAAAhAAYAAAABAAMAAAAhAAcAAAABAAMAAAAhAAgAAAABAAMAAAAhAAkAAAABAAMAAAAhAAoAAAABAAMAAAAhAAsAAAABAAMAAAAhAAwAAAABAAMAAAAhAA0AAAABAAUAAAAhABAAAAABAAcAAAAhABEAAAABAAMAAAAhABIAAAABAAUAAAAiAPv/AAABAAcAAAAiAPz/AAABAAMAAAAiAP3/AAABAAMAAAAiAP7/AAABAAMAAAAiAP//AAABAAMAAAAiAAAAAAABAAMAAAAiAAEAAAABAAMAAAAiAAIAAAABAAMAAAAiAAMAAAABAAMAAAAiAAQAAAABAAMAAAAiAAUAAAABAAMAAAAiAAYAAAABAAMAAAAiAAcAAAABAAMAAAAiAAgAAAABAAMAAAAiAAkAAAABAAMAAAAiAAoAAAABAAMAAAAiAAsAAAABAAMAAAAiAAwAAAABAAMAAAAiAA0AAAABAAUAAAAiABAAAAABAAcAAAAiABEAAAABAAMAAAAiABIAAAABAAQAAAAjAPv/AAABAAcAAAAjAPz/AAABAAMAAAAjAP3/AAABAAMAAAAjAP7/AAABAAMAAAAjAP//AAABAAMAAAAjAAAAAAABAAMAAAAjAAEAAAABAAMAAAAjAAIAAAABAAMAAAAjAAMAAAABAAMAAAAjAAQAAAABAAMAAAAjAAUAAAABAAMAAAAjAAYAAAABAAMAAAAjAAcAAAABAAMAAAAjAAgAAAABAAMAAAAjAAkAAAABAAMAAAAjAAoAAAABAAMAAAAjAAsAAAABAAMAAAAjAAwAAAABAAMAAAAjAA0AAAABAAUAAAAjABAAAAABAAcAAAAjABEAAAABAAMAAAAjABIAAAABAAQAAAAkABAAAAADAAcAAAAkABEAAAAAAAYAAAAkABIAAAACAAQAAAAaABAAAAABAAcAAAAaABEAAAABAAMAAAAaABIAAAABAAUAAAAcAP3/AAAAAAMAAAAcAP7/AAAAAAMAAAAcAP//AAAAAAMAAAAcAAAAAAACAAYAAAAcAAEAAAAAAAMAAAAcAAIAAAAAAAMAAAAcAAMAAAAAAAMAAAAcAAQAAAAAAAMAAAAcAAUAAAACAAYAAAAcAAYAAAAAAAMAAAAcAAcAAAACAAYAAAAcAAgAAAACAAYAAAAcAAkAAAAAAAMAAAAcAAoAAAAAAAMAAAAcAAsAAAACAAYAAAAcAAwAAAACAAYAAAAcAA0AAAAAAAQAAAARAAYAAAAGAAcAAAARAAUAAAAGAAcAAAAQAAYAAAAGAAcAAAAQAAUAAAAGAAcAAAAPAAYAAAAGAAcAAAAPAAUAAAAGAAcAAAAOAAYAAAAGAAcAAAAOAAUAAAAGAAcAAAANAAYAAAAGAAcAAAANAAUAAAAGAAcAAAAMAAYAAAAFAAcAAAAMAAUAAAAFAAcAAAASAAUAAAAHAAcAAAASAAYAAAAHAAcAAAALAAsAAAAGAAcAAAAKAAsAAAAGAAcAAAAJAAsAAAAGAAcAAAAIAAsAAAAGAAcAAAAHAAsAAAAGAAcAAAAbAAsAAAAGAAcAAAAaAAsAAAAGAAcAAAAZAAsAAAAGAAcAAAAYAAsAAAAGAAcAAAAXAAsAAAAGAAcAAAAWAAsAAAAGAAcAAAAVAAsAAAAGAAcAAAAUAAsAAAAGAAcAAAATAAsAAAAFAAcAAAA=")
tile_set = ExtResource("1_cusiw")

[node name="RoomStartArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomStartArea"]
position = Vector2(282.5, 250.5)
shape = SubResource("RectangleShape2D_jwdnj")

[node name="CameraMoveArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraMoveArea"]
position = Vector2(281.5, 131)
shape = SubResource("RectangleShape2D_cusiw")

[node name="CameraPos" type="Marker2D" parent="."]
position = Vector2(240, 135)

[node name="RoomStartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RoomEndTimer" type="Timer" parent="."]

[node name="Exits" parent="." instance=ExtResource("3_i8l4q")]

[connection signal="body_shape_entered" from="RoomStartArea" to="." method="_on_room_start_area_body_shape_entered"]
[connection signal="body_shape_entered" from="CameraMoveArea" to="." method="_on_camera_move_area_body_shape_entered"]
[connection signal="timeout" from="RoomStartTimer" to="." method="_on_room_start_timer_timeout"]
